Fix scroll always showing in nav
I have no idea why the scrollbars were originally added... They should
never show

--- a/public/map.css
+++ b/public/map.css
@@ -123,7 +123,7 @@ html, body, #map-canvas {
 
 /* Nav Styles */
 #nav {
-	overflow: scroll;
+	overflow: auto;
 }
 
 #nav h3 {
